copy text fixes and image weighting

--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -7,7 +7,7 @@
 <div *ngIf="state === 2" @routePageAnimation>
   <p class="small">Dear Participant,</p>
   <p class="small">
-    the following experience will lead you through a collection of questions about your person.
+    The following experience will lead you through a series of questions.
   </p>
   <p class="small">
     In combination with a visual analysis of your facial features,
@@ -34,7 +34,7 @@
     And thank you for your trust!
   </p>
   <p>
-    Please answer the following questions spontanous but also honestly.
+    Please answer the following questions spontanously but also honestly.
   </p>
   <button class="call-to-action" (click)="goToQuestions()">
     Proceed to questions
