--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <router-outlet></router-outlet>
 
-<i class="fa fa-wifi" aria-hidden="true" [style.color]="socketService.socket.connected ? 'green' : 'red'"></i>
+<i class="fa fa-wifi" (touchstart)="onStartTouch()" (touchend)="onEndTouch($event)" aria-hidden="true" [style.color]="socketService.socket.connected ? 'green' : 'red'"></i>
